# pyskel

./: .gitattributes  .gitignore  CLAUDE.md  README.md  README_zh.md  pyskel
.github/workflows/: e2e.yml
docs/superpowers/plans/: 2026-06-08-pyskel-aio.md  2026-06-08-pyskel-mq.md
docs/superpowers/specs/: 2026-06-08-pyskel-aio-mq-design.md
tests/: e2e.sh
tpl/aio/: README.md  README_zh.md  control.sh  pyproject.toml  settings.yaml
tpl/aio/aio/: core.py  main.py
tpl/mq/: README.md  README_zh.md  control.sh  pyproject.toml  settings.yaml
tpl/mq/mq/: core.py  handler.py  main.py
tpl/multi_p/: README.md  README_zh.md  control.sh  pyproject.toml  settings.yaml
tpl/multi_p/multi_p/: core.py  main.py
tpl/multi_p_g/: .editorconfig  README.md  README_zh.md  control.sh  gen.sh  pyproject.toml  settings.yaml
tpl/multi_p_g/multi_p_g/: core.py  handler.py  main.py
tpl/multi_p_g/multi_p_g/pb/: __init__.py  service_pb2.py  service_pb2_grpc.py
tpl/multi_p_g/proto/: service.proto
tpl/multi_p_h/: README.md  README_zh.md  control.sh  pyproject.toml  settings.yaml
tpl/multi_p_h/multi_p_h/: config.py  core.py  main.py
tpl/multi_p_t/: README.md  README_zh.md  control.sh  gen.sh  pyproject.toml  settings.yaml
tpl/multi_p_t/multi_p_t/: core.py  handler.py  main.py
tpl/multi_p_t/multi_p_t/pb/: __init__.py
tpl/multi_p_t/multi_p_t/pb/tsvc/: PingService.py  constants.py  ttypes.py
tpl/multi_p_t/proto/: service.thrift
tpl/multi_t/: README.md  README_zh.md  control.sh  pyproject.toml  settings.yaml
tpl/multi_t/multi_t/: core.py  main.py
tpl/multi_t_q/: README.md  README_zh.md  control.sh  pyproject.toml  settings.yaml
tpl/multi_t_q/multi_t_q/: core.py  main.py  tasks.py
tpl/simple/: .gitignore  README.md  README_zh.md  control.sh  pyproject.toml  settings.yaml
tpl/simple/simple/: core.py  main.py
