[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aio"
version = "0.1.0"
description = "Asyncio Python service"
requires-python = ">=3.12"
dependencies = [
  "dynaconf>=3.2",
]

[project.scripts]
aio = "aio.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aio*"]
