[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mq"
version = "0.1.0"
description = "Asyncio Redis Streams consumer service"
requires-python = ">=3.12"
dependencies = [
  "dynaconf>=3.2",
  "redis>=5",
]

[project.scripts]
mq = "mq.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mq*"]
