[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_p_t"
version = "0.1.0"
description = "Multi-process Apache Thrift service"
requires-python = ">=3.12"
dependencies = [
  "dynaconf>=3.2",
  "thrift>=0.20",
]

[project.scripts]
multi_p_t = "multi_p_t.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["multi_p_t*"]
